class7/AWS/Terraform/10.28.25/2-subnets.tf
#These are   for  public

resource "aws_subnet" "public-eu-west-1a" {
  vpc_id                  = aws_vpc.czj-vpc.id
  cidr_block              = "10.25.1.0/24"
  availability_zone       = "eu-west-1a"
  map_public_ip_on_launch = true

  tags = {
    Name    = "public-eu-west-1a"
    Service = "application1"
    Owner   = "Luke"
    Planet  = "Musafar"
  }
}

resource "aws_subnet" "public-eu-west-1b" {
  vpc_id                  = aws_vpc.czj-vpc.id
  cidr_block              = "10.25.2.0/24"
  availability_zone       = "eu-west-1b"
  map_public_ip_on_launch = true

  tags = {
    Name    = "public-eu-west-1b"
    Service = "application1"
    Owner   = "Luke"
    Planet  = "Musafar"
  }
}


resource "aws_subnet" "public-eu-west-1c" {
  vpc_id                  = aws_vpc.czj-vpc.id
  cidr_block              = "10.25.3.0/24"
  availability_zone       = "eu-west-1c"
  map_public_ip_on_launch = true

  tags = {
    Name    = "public-eu-west-1c"
    Service = "application1"
    Owner   = "Luke"
    Planet  = "Musafar"
  }
}

#these are for private
resource "aws_subnet" "private-eu-west-1a" {
  vpc_id            = aws_vpc.czj-vpc.id
  cidr_block        = "10.25.11.0/24"
  availability_zone = "eu-west-1a"

  tags = {
    Name    = "private-eu-west-1a"
    Service = "application1"
    Owner   = "Luke"
    Planet  = "Musafar"
  }
}

resource "aws_subnet" "private-eu-west-1b" {
  vpc_id            = aws_vpc.czj-vpc.id
  cidr_block        = "10.25.12.0/24"
  availability_zone = "eu-west-1b"

  tags = {
    Name    = "private-eu-west-1b"
    Service = "application1"
    Owner   = "Luke"
    Planet  = "Musafar"
  }
}


resource "aws_subnet" "private-eu-west-1c" {
  vpc_id            = aws_vpc.czj-vpc.id
  cidr_block        = "10.25.13.0/24"
  availability_zone = "eu-west-1c"

  tags = {
    Name    = "private-eu-west-1c"
    Service = "application1"
    Owner   = "Luke"
    Planet  = "Musafar"
  }
}
